@@ -9,10 +9,10 @@ public record PlayerGroupGroupData(UUID id, String name, Set<UUID> ancestors, Se
     public PlayerGroupGroupData(@Nonnull UUID id, @Nonnull String name, @Nonnull Set<UUID> ancestors, @Nonnull Set<UUID> descendants, @Nonnull Set<UUID> directMembers, @Nonnull Set<String> permissions) {
         this.id = id;
         this.name = name;
-        this.ancestors = Set.copyOf(ancestors);
-        this.descendants = Set.copyOf(descendants);
-        this.directMembers = Set.copyOf(directMembers);
-        this.permissions = Set.copyOf(permissions);
+        this.ancestors = Collections.unmodifiableSet(ancestors);
+        this.descendants = Collections.unmodifiableSet(descendants);
+        this.directMembers = Collections.unmodifiableSet(directMembers);
+        this.permissions = Collections.unmodifiableSet(permissions);
     }
 
 }
